-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 18, 19
-
Component/s: hotspot
-
b23
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8294896 | 17.0.6-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b02 |
| JDK-8295483 | 17.0.6 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8294898 | 11.0.18-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b02 |
StressCodeBuffers: have expanded 128 times
StressCodeBuffers: have expanded 256 times
StressCodeBuffers: have expanded 512 times
StressCodeBuffers: have expanded 1024 times
StressCodeBuffers: have expanded 2048 times
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/macroAssembler_aarch64.cpp:4646
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/35546316-ed70-4084-8244-d672e7734fd1-S13240/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/314725c0-be51-4206-8ed3-e333582d452e/runs/c4733186-d791-4016-86cc-a894de692237/workspace/open/src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp:4646), pid=1511627, tid=1511637
# assert(false) failed: failed to allocate space for trampoline
#
# JRE version: Java(TM) SE Runtime Environment (18.0+10) (fastdebug build 18-ea+10-439)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+10-439, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, serial gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x1268958] MacroAssembler::zero_words(RegisterImpl*, RegisterImpl*)+0x808
- backported by
-
JDK-8294896 compiler/codecache/TestStressCodeBuffers.java crashes with "failed to allocate space for trampoline"
-
- Resolved
-
-
JDK-8294898 compiler/codecache/TestStressCodeBuffers.java crashes with "failed to allocate space for trampoline"
-
- Resolved
-
-
JDK-8295483 compiler/codecache/TestStressCodeBuffers.java crashes with "failed to allocate space for trampoline"
-
- Resolved
-
- duplicates
-
JDK-8287129 TestStressCodeBuffers.java crashes on macosx_aarch64
-
- Closed
-
- relates to
-
JDK-8270947 AArch64: C1: use zero_words to initialize all objects
-
- Resolved
-
-
JDK-8298720 Insufficient error handling when CodeBuffer is exhausted
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/39e6ebd2
-
Commit
openjdk/jdk/0948c097
-
Review
openjdk/jdk11u-dev/1503
-
Review
openjdk/jdk17u-dev/794
-
Review
openjdk/jdk18u/173
-
Review
openjdk/jdk/8730