8272094: compiler/codecache/TestStressCodeBuffers.java crashes with "failed to allocate space for trampoline"